@@ -9,6 +9,7 @@ phpMyAdmin - ChangeLog
 - bug #3428627 [import] ODS import ignores memory limits
 - bug #3426836 [interface] Visual column separation
 - bug #3428065 [parser] TRUE not recognized by parser
++ patch #3433770 [config] Make location of php-gettext configurable
 
 3.4.7.0 (2011-10-23)
 - bug #3418610 [interface] Links in navigation when $cfg['MainPageIconic'] = false
